--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -36,15 +36,21 @@
   margin-top: 15px;
 }
 
-.LoginContent .Card .CardBody input[type="submit"] {
+.LoginContent .Card .CardBody button {
   background-color: #2274a5;
   color: #f9f9f9;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   transition: 200ms;
+  width: 100%;
+  margin-top: 15px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.LoginContent .Card .CardBody input[type="submit"]:hover {
+.LoginContent .Card .CardBody button:hover {
   filter: brightness(115%);
   transform: translateY(-4px);
   box-shadow: 0 6px 4px rgba(0, 0, 0, 0.25);
