--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,9 @@ textarea {
   transition: 200ms;
   outline: none;
   border-radius: 4px;
+  font-family: "Baloo Thambi 2", cursive !important;
+  font-size: 16px;
+  color: #434343;
 }
 
 input[type="text"]:focus,
